  * goto definition now displays error in status line if no definition found or opening source file fails
  * now jumping to definition if multiple definitions exist on the same line
  * brace highlighting now shows error in status line for mismatched brackets
  * brace highlighting now also shows begin/end of block comments
  * fixed pasting html text not omitting format information
  * now using environment variable DMD_LIB to pass library path to DMD, please update DMDs sc.ini accordingly
  * now build checks whether output files are actually created to avoid silent link failure
  * generating JSON output is now the default setting for new projects

2010-08-11 Version 0.3.15

  * when reading import paths from sc.ini, the directory is determined by searching dmd.exe 
    through the executable paths setting and the PATH environment variable
  * fixed freeze when searching indentation level for smart indent (might also affect brace
    matching)
  * now packaged with cv2pdb 0.16.
  * fixed crash when running along-side the Qt-Addin for Visual Studio

2010-09-24 Version 0.3.16

  * now Visual D itself also compiles against VSI SDK for Visual Studio 2010 and Windows SDK v7.1
  * empty dependency file now causes rebuild
  * new command "Build phobos browse info"
  * added support for Mago debugger
  * fixed dmd option for profiling
  * fixed bad status message for matching parenthesis
  * now supports command comment/uncomment selected lines
  * improved smart indentation
  * block re-indentation now works as a single command with respect to undo/redo
  * now packaged with cv2pdb 0.17
  * fixed loading DLLs (including Visual D) on Windows Server 2003
  * now installer includes Mago debugger
  * new profiler window to display trace.log
  * fixed bad variable replacement when building project name shorter than 4 characters

unreleased Version 0.3.17

  * improved support for mercurial-scc, AnkhSVN and VisualHG
