@@ -1,3 +1,3 @@
 #define VERSION_MAJOR      0
 #define VERSION_MINOR      3
-#define VERSION_REVISION   16
+#define VERSION_REVISION   17
