@@ -4,6 +4,7 @@
 "g_commandSetCLSID:CmdShowMethodTip"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x03, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x104
 "g_commandSetCLSID:CmdShowProfile"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x03, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x111
 "g_commandSetCLSID:CmdShowScope"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x03, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x103
+"g_commandSetCLSID:CmdToggleComment"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x03, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x105
 "g_packageCLSID"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x7f, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }
 "g_packageCLSID:IDG_VD_BUILD"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x7f, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x0102
 "g_packageCLSID:IDG_VD_EDIT"={ 0x002a2de9, 0x8bb6, 0x484d, { 0x98, 0x7f, 0x7e, 0x4a, 0xd4, 0x08, 0x47, 0x15 } }:0x0101
